# python-batch-job-template

./: LICENSE  README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter._project_name_kebab_case}}/: pyproject.toml
{{cookiecutter._project_name_kebab_case}}/terraform/: locals.tf
{{cookiecutter.project_name_kebab_case}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.project_name_kebab_case}}/terraform/: locals.tf  main.tf
{{cookiecutter.project_name_kebab_case}}/{{cookiecutter.project_name_snake_case}}/config/local/: logging.conf
{{cookiecutter.project_name_snake_case}}/: README.md
{{cookiecutter.project_name_snake_case}}/terraform/: main.tf  s3.tf  variables.tf
