[tool.poetry]
name = "{{cookiecutter.project_name_kebab_case}}"
version = "1.0.3"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pydantic = "^2.2.1"
pydantic-settings = "^2.0.3"
tenacity = "^8.2.3"
boto3 = "^1.28.63"
botocore = "^1.31.63"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=120